activation key update to responses from candlepin